GPC/tests/examples/fail/errArith10.gpc

void GPRM::Test::errArith10() {
    return 3 ^ 3.0;
}


